// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FindWeather container renders 1`] = `
<styled.div>
  <styled.h2>
    Weather App
  </styled.h2>
  <Search
    allowClear={true}
    enterButton={false}
    onSearch={[Function]}
    placeholder="Enter city name..."
    size="large"
    style={
      Object {
        "width": 200,
      }
    }
  />
  <Connect(WeathersList) />
</styled.div>
`;

exports[`FindWeather container renders while data is fetching 1`] = `
<styled.div>
  <styled.h2>
    Weather App
  </styled.h2>
  <Search
    allowClear={true}
    enterButton={false}
    onSearch={[Function]}
    placeholder="Enter city name..."
    size="large"
    style={
      Object {
        "width": 200,
      }
    }
  />
  <Spinner />
</styled.div>
`;

exports[`FindWeather container renders with fetching error 1`] = `
<styled.div>
  <styled.h2>
    Weather App
  </styled.h2>
  <Search
    allowClear={true}
    enterButton={false}
    onSearch={[Function]}
    placeholder="Enter city name..."
    size="large"
    style={
      Object {
        "width": 200,
      }
    }
  />
  <ErrorBox
    message="city not found"
  />
</styled.div>
`;

exports[`FindWeather container renders with no weather data 1`] = `
<styled.div>
  <styled.h2>
    Weather App
  </styled.h2>
  <Search
    allowClear={true}
    enterButton={false}
    onSearch={[Function]}
    placeholder="Enter city name..."
    size="large"
    style={
      Object {
        "width": 200,
      }
    }
  />
</styled.div>
`;
